from typing import Dict, Any
from .memory import Memory
from .model import BaseModel
from .tools import Tools

class Orchestration:
    """
    Orchestrates the interaction between different components of the system.
    """
    
    def __init__(self):
        """Initialize the orchestration system."""
        pass
    
    async def process_query(
        self,
        query: str,
        context: Dict[str, Any],
        memory: Memory,
        model: BaseModel,
        tools: Tools
    ) -> str:
        """
        Process a query through the system components.
        
        Args:
            query: User query
            context: Request context
            memory: Memory system instance
            model: AI model instance
            tools: Tools system instance
            
        Returns:
            str: Generated response
        """
        # Retrieve relevant context from memory
        memory_context = await memory.retrieve_context(query)
        
        # Combine with request context
        full_context = {**context, **memory_context}
        
        # Generate response using the model
        response = await model.generate_response(query, full_context)
        
        # Store interaction in memory
        await memory.store_interaction(query, response, full_context)
        
        return response 