from typing import Dict, Any

class Tools:
    """Tools system for external integrations."""
    
    def __init__(self):
        self._tools = {}
    
    async def execute_tool(self, tool_name: str, params: Dict[str, Any]) -> Any:
        """Execute a tool by name."""
        # Simple implementation for testing
        return f"Executed {tool_name} with params: {params}" 